--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <style>
         body {
-            /* background-color: rgb(207, 228, 207); */
+            user-select: none;
         }
 
         .size-box {
@@ -38,7 +38,9 @@
         }
 
         .size-box:hover {
-            background-color: rgba(0, 128, 0, 0.1);
+            background-color: green;
+            color: white;
+            font-weight: bold;
             /* Light green background on hover */
         }
 
@@ -91,6 +93,18 @@
         /* Optional: Add spacing and alignment */
         .nav-tabs .nav-link {
             margin-right: 5px;
+            color: black;
+        }
+
+        .nav-tabs .nav-link.active {
+            color: green;
+            background-color: transparent;
+            /* border-color: transparent; */
+            border-bottom: 2px solid green;
+            border-radius: 0;
+            font-weight: bold;
+
+
         }
 
         @media (min-width: 768px) {
@@ -99,6 +113,40 @@
             .tab-scroll-container {
                 overflow-x: visible;
             }
+        }
+
+        .rate {
+            font-weight: bold;
+        }
+
+        /* Review Card Styling */
+        .review-card {
+            background-color: #f9f9f9;
+        }
+
+        /* Star Rating Styling */
+        .star-rating {
+            color: #ffc107;
+            /* Bootstrap's default warning color for stars */
+            font-size: 1.2em;
+            /* Increase star size */
+        }
+
+        .hidden-review {
+            display: none;
+        }
+
+        .star {
+            font-size: 2em;
+            /* Adjust size as needed */
+            color: #e4e5e9;
+            /* Gray color for unselected stars */
+            cursor: pointer;
+        }
+
+        .star:hover {
+            color: #ffc107;
+            /* Yellow color on hover */
         }
 
 
@@ -111,15 +159,12 @@
         <div class="row">
             <!-- Product Image Section -->
             <div class="col-md-6">
-                <img id="mainImage" src="20240125134501tata-tafgor-insecticide-1000x1000-removebg-preview.png"
-                    class="img-fluid" alt="Product Image">
+                <img id="mainImage" src="roundup.png" class="img-fluid" alt="Product Image">
                 <div class="mt-3">
-                    <img src="https://via.placeholder.com/100x100" class="img-thumbnail product-thumbnail"
-                        onclick="changeImage(this.src)" alt="Thumbnail 1">
-                    <img src="https://via.placeholder.com/100x100" class="img-thumbnail product-thumbnail"
-                        onclick="changeImage(this.src)" alt="Thumbnail 2">
-                    <img src="https://via.placeholder.com/100x100" class="img-thumbnail product-thumbnail"
-                        onclick="changeImage(this.src)" alt="Thumbnail 3">
+                    <img src="roundup.png" class="img-thumbnail product-thumbnail me-2" onclick="changeImage(this)"
+                        alt="Thumbnail 1">
+                    <img src="monostar.png" class="img-thumbnail product-thumbnail" onclick="changeImage(this)"
+                        alt="Thumbnail 3">
                 </div>
             </div>
 
@@ -225,8 +270,107 @@
                             specifications.</p>
                     </div>
                     <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
-                        <h5>Customer Reviews</h5>
-                        <p>No reviews yet. Be the first to review this product!</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h5>Customer Reviews</h5>
+                            <button class="btn btn-success rate" data-bs-toggle="modal"
+                                data-bs-target="#rateProductModal">Rate Product</button>
+                        </div>
+                        <!-- Rating Product Modal -->
+                        <div class="modal fade" id="rateProductModal" tabindex="-1"
+                            aria-labelledby="rateProductModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="rateProductModalLabel">Rate This Product</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form id="ratingForm">
+                                            <div class="mb-3">
+                                                <label for="starRating" class="form-label">Rating</label>
+                                                <div id="starRating">
+                                                    <span class="star" onclick="setRating(1)">★</span>
+                                                    <span class="star" onclick="setRating(2)">★</span>
+                                                    <span class="star" onclick="setRating(3)">★</span>
+                                                    <span class="star" onclick="setRating(4)">★</span>
+                                                    <span class="star" onclick="setRating(5)">★</span>
+                                                </div>
+                                                <input type="hidden" id="ratingValue" name="ratingValue" value="">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="feedback" class="form-label">Feedback</label>
+                                                <textarea class="form-control" id="feedback" rows="3"
+                                                    required></textarea>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="productImage" class="form-label">Upload an Image
+                                                    (optional)</label>
+                                                <input type="file" class="form-control" id="productImage"
+                                                    accept="image/*">
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-success text-uppercase fw-bold" onclick="submitRating()">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="review-card mt-4 p-3 border rounded">
+                            <div class="d-flex align-items-center mb-3">
+                                <img src="OIP.jfif" alt="Customer Image" class="rounded-circle me-3" width="50"
+                                    height="50">
+                                <div>
+                                    <h6 class="mb-0">John Doe</h6>
+                                    <div class="star-rating">
+                                        ★★★★☆
+                                    </div>
+                                </div>
+                            </div>
+                            <p>"This product has exceeded my expectations! High quality and fast delivery."</p>
+                        </div>
+                        <div class="review-card mt-4 p-3 border rounded">
+                            <div class="d-flex align-items-center mb-3">
+                                <img src="OIP (1).jfif" alt="Customer Image" class="rounded-circle me-3" width="50"
+                                    height="50">
+                                <div>
+                                    <h6 class="mb-0">Jane Smith</h6>
+                                    <div class="star-rating">
+                                        ★★★☆☆
+                                    </div>
+                                </div>
+                            </div>
+                            <p>"Good product, but the packaging could be improved. Overall, satisfied with my purchase."
+                            </p>
+                        </div>
+                        <div class="hidden-review">
+                            <div class="review-card mt-4 p-3 border rounded">
+                                <div class="d-flex align-items-center mb-3">
+                                    <img src="ai-generated-happy-woman-thumbs-up-with-white-background-photo.jpg"
+                                        Customer Image" class="rounded-circle me-3" width="50" height="50">
+                                    <div>
+                                        <h6 class="mb-0">Alice Johnson</h6>
+                                        <div class="star-rating">★★★★★</div>
+                                    </div>
+                                </div>
+                                <p>"Amazing quality and value for money. Highly recommend this product!"</p>
+                            </div>
+                            <div class="review-card mt-4 p-3 border rounded ">
+                                <div class="d-flex align-items-center mb-3">
+                                    <img src="redhead-man-laughing_1368-37169.avif" alt="Customer Image"
+                                        class="rounded-circle me-3" width="50" height="50">
+                                    <div>
+                                        <h6 class="mb-0">Michael Brown</h6>
+                                        <div class="star-rating">★★★★☆</div>
+                                    </div>
+                                </div>
+                                <p>"The product is really good but took a while to arrive. Overall, happy with it."</p>
+                            </div>
+                        </div>
+                        <button id="viewAllReviewsBtn" class="btn btn-link mt-3">View All Reviews</button>
                     </div>
                     <div class="tab-pane fade" id="video" role="tabpanel" aria-labelledby="video-tab">
                         <h5>Product Demonstration Video</h5>
@@ -255,15 +399,64 @@
                 </div>
             </div>
         </div>
-
-
-
     </div>
+
+
 
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script>
+        function selectUnit(button) {
+            // Remove 'selected' class from all buttons
+            const unitButtons = document.querySelectorAll('.unit-btn');
+            unitButtons.forEach(btn => btn.classList.remove('selected'));
+
+            // Add 'selected' class to the clicked button
+            button.classList.add('selected');
+        }
+        document.getElementById('viewAllReviewsBtn').addEventListener('click', function () {
+            const hiddenReviews = document.querySelectorAll('.hidden-review');
+            hiddenReviews.forEach(review => review.style.display = 'block');
+            this.style.display = 'none'; // Hide the button after showing all reviews
+        });
+        function changeImage(thumbnail) {
+            document.getElementById('mainImage').src = thumbnail.src;
+        }
+        let selectedRating = 0;
+
+        function setRating(rating) {
+            selectedRating = rating;
+            document.getElementById('ratingValue').value = rating;
+            const stars = document.querySelectorAll('.star');
+            stars.forEach((star, index) => {
+                star.style.color = index < rating ? '#ffc107' : '#e4e5e9'; // Yellow for selected stars, gray for unselected
+            });
+        }
+
+        function submitRating() {
+            const feedback = document.getElementById('feedback').value;
+            const imageInput = document.getElementById('productImage').files[0];
+
+            if (selectedRating === 0 || !feedback) {
+                alert('Please provide a rating and feedback.');
+                return;
+            }
+
+            // Here you can handle form submission, e.g., send data to a server or store it
+            alert(`Rating: ${selectedRating} stars\nFeedback: ${feedback}\nImage: ${imageInput ? imageInput.name : 'No image uploaded'}`);
+
+            // Close the modal after submission
+            $('#rateProductModal').modal('hide');
+            document.getElementById('ratingForm').reset();
+            selectedRating = 0; // Reset rating
+            setRating(0); // Reset stars
+        }
+
+
+
+    </script>
 </body>
 
 </html>
