"Adding the links"

--- a/index.html
+++ b/index.html
@@ -277,7 +277,11 @@
             </div>
         </div>
     </div>
-
+    <div>
+        <a href="slider.html">Slider</a>
+        <a href="user-profile.html">User profile</a>
+        <a href="cart.html">Cart page</a>
+    </div>
 
 
     <script src="product.js"></script>
