--- a/index.html
+++ b/index.html
@@ -434,7 +434,11 @@
             </div>
         </div>
     </div>
-    
+    <dir>
+        <a href="user-profile.html"> user profile</a>
+        <a href="cart.html">cart</a>
+        <a href="slider.html">sliding</a>
+    </dir>
 
 
     <script src="product.js"></script>
