--- a/index.html
+++ b/index.html
@@ -192,7 +192,21 @@
         /* Yellow color on hover */
     }
 
+    .about-heading {
+            color: #000;
+            font-size: 26px;
+            font-weight: 300;
+            text-align: center;
+            text-transform: uppercase;
+            position: relative;
+            /* margin: 45px; */
+        }
 
+        .about-heading b {
+            color: #ffc000;
+        }
+
+        
 
     #mainImage {
         max-height: 500px;
@@ -458,7 +472,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="googleMapModalLabel">Store Location</h5>
+                    <h4 class="modal-title about-heading"  id="googleMapModalLabel">Store <b class="text-uppercase text-success">Location</b></h4>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
