--- a/index.html
+++ b/index.html
@@ -196,15 +196,14 @@
             color: #000;
             font-size: 26px;
             font-weight: 300;
-            text-align: center;
             text-transform: uppercase;
             position: relative;
             /* margin: 45px; */
         }
 
-        .about-heading b {
-            color: #ffc000;
-        }
+    .about-heading b {
+        color: #ffc000;
+    }
 
         
 
@@ -325,13 +324,13 @@
                 <div class="tab-content mt-3" id="productTabContent">
                     <div class="tab-pane fade show active" id="description" role="tabpanel"
                         aria-labelledby="description-tab">
-                        <h5>Product Description</h5>
+                        <h4 class="about-heading">Product <b class="text-uppercase text-success">Description</b></h4>
                         <p>Product description goes here. It gives details about the product, features, and
                             specifications.</p>
                     </div>
                     <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
                         <div class="d-flex justify-content-between align-items-center">
-                            <h5>Customer Reviews</h5>
+                            <h4 class="about-heading">Customer <b class="text-uppercase text-success">Reviews</b></h4>
                             <button class="btn btn-success rate" data-bs-toggle="modal"
                                 data-bs-target="#rateProductModal">Rate Product</button>
                         </div>
@@ -434,14 +433,14 @@
                         <button id="viewAllReviewsBtn" class="btn btn-link mt-3">View All Reviews</button>
                     </div>
                     <div class="tab-pane fade" id="video" role="tabpanel" aria-labelledby="video-tab">
-                        <h5>Product Demonstration Video</h5>
+                        <h4 class="about-heading">Product <b class="text-uppercase text-success">Demonstration</b></h4>
                         <div class="video-container">
                             <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0"
                                 allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="features" role="tabpanel" aria-labelledby="features-tab">
-                        <h5>Features & Benefits</h5>
+                        <h4 class="about-heading">Feature & <b class="text-uppercase text-success">Benefits</b></h4>
                         <ul>
                             <li>Feature 1: Brief description of feature 1.</li>
                             <li>Feature 2: Brief description of feature 2.</li>
@@ -450,7 +449,7 @@
                     </div>
                     <div class="tab-pane fade" id="recommendations" role="tabpanel"
                         aria-labelledby="recommendations-tab">
-                        <h5>Recommendations</h5>
+                        <h4 class="about-heading">Recommen<b class="text-uppercase text-success">dations</b></h4>
                         <p>We recommend pairing this product with:</p>
                         <ul>
                             <li>Recommended Product 1</li>
@@ -461,11 +460,13 @@
             </div>
         </div>
     </div>
-    <dir>
-        <a href="user-profile.html"> user profile</a>
-        <a href="cart.html">cart</a>
-        <a href="slider.html">sliding</a>
-    </dir>
+    <div>
+        <button onclick="window.location.href='user-profile.html'">product collection</button></button>
+        <button onclick="window.location.href='cart.html'">Cart page</button></button>
+        <button onclick="window.location.href='sliding.html'">Sliding</button></button>
+        <button onclick="window.location.href='product_collection.html'">product collection</button></button>
+        <button onclick="window.location.href='about.html'">About page</button></button>
+    </div>
 
     <!-- Google Map Modal -->
     <div class="modal fade" id="googleMapModal" tabindex="-1" aria-labelledby="googleMapModalLabel" aria-hidden="true">
