--- a/user-profile.html
+++ b/user-profile.html
@@ -93,7 +93,7 @@
             <button type="button" class="btn btn-primary" id="editProfileBtn" onclick="enableEdit()">Edit Profile</button>
             <button type="button" class="btn btn-success d-none" id="saveProfileBtn" onclick="saveProfile()">Save Changes</button>
             <div class="mt-2">
-                <a href="#" class="text-decoration-none" data-bs-toggle="modal" data-bs-target="#changePasswordModal">Change Password?</a>
+                <a href="#" class="text-decoration-none text-success" data-bs-toggle="modal" data-bs-target="#changePasswordModal">Change Password?</a>
             </div>
         </div>
     </form>
@@ -125,7 +125,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" onclick="changePassword()">Change Password</button>
+                <button type="button" class="btn btn-success" onclick="changePassword()">Change Password</button>
             </div>
         </div>
     </div>
