"Adding the rating filter"

--- a/product_collection.html
+++ b/product_collection.html
@@ -65,6 +65,30 @@
                 </div>
             </div>
 
+             <!-- Rating Filter -->
+             <h6 class="mt-4">Rating</h6>
+             <div class="form-check">
+                 <input type="checkbox" class="form-check-input" id="rating1" value="1">
+                 <label class="form-check-label" for="rating1">1 Star & Above</label>
+             </div>
+             <div class="form-check">
+                 <input type="checkbox" class="form-check-input" id="rating2" value="2">
+                 <label class="form-check-label" for="rating2">2 Stars & Above</label>
+             </div>
+             <div class="form-check">
+                 <input type="checkbox" class="form-check-input" id="rating3" value="3">
+                 <label class="form-check-label" for="rating3">3 Stars & Above</label>
+             </div>
+             <div class="form-check">
+                 <input type="checkbox" class="form-check-input" id="rating4" value="4">
+                 <label class="form-check-label" for="rating4">4 Stars & Above</label>
+             </div>
+             <div class="form-check">
+                 <input type="checkbox" class="form-check-input" id="rating5" value="5">
+                 <label class="form-check-label" for="rating5">5 Stars Only</label>
+             </div>
+ 
+
             <!-- Brand Filter -->
             <h6 class="mt-4">Brand</h6>
             <div>
@@ -133,6 +157,39 @@
                 <input type="radio" class="form-check-input" name="priceRange" id="range3" value="250-500">
                 <label class="form-check-label" for="range3">₹250 - ₹500</label>
             </div>
+        </div>
+
+        <h6 class="mt-4">Rating</h6>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="rating1Mobile" value="1">
+            <label class="form-check-label" for="rating1Mobile">1 Star & Above</label>
+        </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="rating2Mobile" value="2">
+            <label class="form-check-label" for="rating2Mobile">2 Stars & Above</label>
+        </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="rating3Mobile" value="3">
+            <label class="form-check-label" for="rating3Mobile">3 Stars & Above</label>
+        </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="rating4Mobile" value="4">
+            <label class="form-check-label" for="rating4Mobile">4 Stars & Above</label>
+        </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="rating5Mobile" value="5">
+            <label class="form-check-label" for="rating5Mobile">5 Stars Only</label>
+        </div>
+
+        <!-- Brand Filter -->
+        <h6 class="mt-4">Brand</h6>
+        <div>
+            <input type="checkbox" id="brand1Mobile">
+            <label for="brand1Mobile">Brand A</label>
+        </div>
+        <div>
+            <input type="checkbox" id="brand2Mobile">
+            <label for="brand2Mobile">Brand B</label>
         </div>
 
         <!-- Brand Filter -->
