add the product detail page

--- a/slider.html
+++ b/slider.html
@@ -90,6 +90,7 @@
 <body>
 
 <div class="slider-container">
+    <img src="logo.png" alt="">
     <div>
     <h4 class="about-heading">Our <b class="text-uppercase text-success">Categories</b></h4>
     </div>
